# cosmic-applet-ollama

./: .ralphrc  Cargo.toml  README.md  com.github.paul_wade.cosmic-applet-ollama.yml  justfile  prd.md  ralph-prompt.md  ralph.sh
.github/workflows/: ci.yml  release.yml
.ralph/: .circuit_breaker_state  .loop_start_sha  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
i18n/en/: cosmic_applet_ollama.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  context.rs  history.rs  i18n.rs  main.rs  ollama.rs  web.rs
