[package]
name = "cosmic-applet-ollama"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Quick chat with Ollama"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
