[package]
name = "cosmic-applet-ollama"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Quick chat with Ollama"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]

[package.metadata.deb]
maintainer = "Paul Wade <paul@fluentcoding.com>"
copyright = "2024-2026, Paul Wade"
license-file = ["LICENSE", "0"]
extended-description = "A COSMIC desktop panel applet for chatting with local Ollama AI models. Features streaming responses, model selection, chat history persistence, and web search integration."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/cosmic-applet-ollama", "usr/bin/", "755"],
    ["resources/app.desktop", "usr/share/applications/com.github.paulwade.cosmic-applet-ollama.desktop", "644"],
    ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.github.paulwade.cosmic-applet-ollama.svg", "644"],
    ["resources/app.metainfo.xml", "usr/share/appdata/com.github.paulwade.cosmic-applet-ollama.metainfo.xml", "644"],
]
